[538] Add 'ComponentSample' example.
Bug 538
Change-Id: I071734da69febeb0ba9275390fa85d41b4a8e719
Signed-off-by: Thomas Guiu <thomas.guiu@soyatec.com>