@@ -361,7 +361,7 @@ This file was generated by Eclipse EGF
         </echoproperties>
     </target>
 	
-	<target name="all" depends="CleanStep_1,TP_mars,TP_build,releng,copy_egf_to_tools_folder,emde,PublishStep_7,emde_feature,diagrams,PublishStep_10,diagrams_representation_feature,docgen,PublishStep_13,docgen_features,ad,PublishStep_16,ad_feature,ad_dsl,PublishStep_19,PublishStep_20,addsl_feature,examples,PublishStep_23,PublishStep_24,PublishStep_25,examples_feature,BuildStep_27,EgfStep_28,BuildStep_29,PublishStep_30,BuildStep_31,PublishStep_32,PublishStep_33,sdk_feature,kitalpha_sdk,TP_win32-win32-x86,TP_win32-win32-x86_64,TP_linux-gtk-x86,TP_linux-gtk-x86_64,TP_macosx-cocoa-x86_64,AntStep_41" />
+	<target name="all" depends="CleanStep_1,TP_mars,TP_build,releng,copy_egf_to_tools_folder,emde,PublishStep_7,emde_feature,diagrams,PublishStep_10,diagrams_representation_feature,docgen,PublishStep_13,docgen_features,ad,PublishStep_16,ad_feature,ad_dsl,PublishStep_19,PublishStep_20,addsl_feature,examples,PublishStep_23,PublishStep_24,PublishStep_25,BuildStep_26,EgfStep_27,BuildStep_28,PublishStep_29,BuildStep_30,PublishStep_31,PublishStep_32,kitalpha_sdk,TP_win32-win32-x86,TP_win32-win32-x86_64,TP_linux-gtk-x86,TP_linux-gtk-x86_64,TP_macosx-cocoa-x86_64,AntStep_39" />
 	<target name="TP_mars" depends="TP_mars_setup_ctk_platform" />
 	<target name="TP_mars_setup_ctk_platform" depends="TP_mars_setup_ctk_platform_setup_platform,TP_mars_setup_ctk_platform_install_ctk_features" />
 	<target name="TP_mars_setup_ctk_platform_setup_platform" depends="TP_mars_setup_ctk_platform_setup_platform_TP_mars,TP_mars_setup_ctk_platform_setup_platform_install_cots_features,TP_mars_setup_ctk_platform_setup_platform_install_sirius_features,TP_mars_setup_ctk_platform_setup_platform_install_diffmerge,TP_mars_setup_ctk_platform_setup_platform_install_ecoretools2,TP_mars_setup_ctk_platform_setup_platform_install_amalgam_features" />
@@ -644,7 +644,7 @@ This file was generated by Eclipse EGF
 		</buckminster>
     </target>
 
-    <target name="BuildStep_27" depends="init,install.buckminster">
+    <target name="BuildStep_26" depends="init,install.buckminster">
         <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
 
 		<echo message="install JRE ${env.JAVA_HOME}" />
@@ -660,14 +660,14 @@ This file was generated by Eclipse EGF
         <buckminster command="importtargetdefinition">
             <cmdargs>
                 <arg value="--active" />
-                <arg value="${relengDir}/buckminster_BuildStep_27/build.target" />
+                <arg value="${relengDir}/buckminster_BuildStep_26/build.target" />
             </cmdargs>
         </buckminster>
 		<echo message="provision : import projects in workspace" />
         <buckminster command="import">
             <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
             <cmdargs>
-                <arg value="${relengDir}/buckminster_BuildStep_27/build.mspec" />
+                <arg value="${relengDir}/buckminster_BuildStep_26/build.mspec" />
             </cmdargs>
         </buckminster>
 
@@ -681,7 +681,7 @@ This file was generated by Eclipse EGF
 		</buckminster>
     </target>
 
-    <target name="BuildStep_29" depends="init,install.buckminster">
+    <target name="BuildStep_28" depends="init,install.buckminster">
         <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
 
 		<echo message="install JRE ${env.JAVA_HOME}" />
@@ -697,14 +697,14 @@ This file was generated by Eclipse EGF
         <buckminster command="importtargetdefinition">
             <cmdargs>
                 <arg value="--active" />
-                <arg value="${relengDir}/buckminster_BuildStep_29/build.target" />
+                <arg value="${relengDir}/buckminster_BuildStep_28/build.target" />
             </cmdargs>
         </buckminster>
 		<echo message="provision : import projects in workspace" />
         <buckminster command="import">
             <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
             <cmdargs>
-                <arg value="${relengDir}/buckminster_BuildStep_29/build.mspec" />
+                <arg value="${relengDir}/buckminster_BuildStep_28/build.mspec" />
             </cmdargs>
         </buckminster>
 
@@ -718,7 +718,7 @@ This file was generated by Eclipse EGF
 		</buckminster>
     </target>
 
-    <target name="BuildStep_31" depends="init,install.buckminster">
+    <target name="BuildStep_30" depends="init,install.buckminster">
         <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
 
 		<echo message="install JRE ${env.JAVA_HOME}" />
@@ -734,14 +734,14 @@ This file was generated by Eclipse EGF
         <buckminster command="importtargetdefinition">
             <cmdargs>
                 <arg value="--active" />
-                <arg value="${relengDir}/buckminster_BuildStep_31/build.target" />
+                <arg value="${relengDir}/buckminster_BuildStep_30/build.target" />
             </cmdargs>
         </buckminster>
 		<echo message="provision : import projects in workspace" />
         <buckminster command="import">
             <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
             <cmdargs>
-                <arg value="${relengDir}/buckminster_BuildStep_31/build.mspec" />
+                <arg value="${relengDir}/buckminster_BuildStep_30/build.mspec" />
             </cmdargs>
         </buckminster>
 
@@ -1045,7 +1045,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_30" depends="init,install.buckminster" >
+	<target name="PublishStep_29" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1074,7 +1074,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_32" depends="init,install.buckminster" >
+	<target name="PublishStep_31" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1103,7 +1103,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_33" depends="init,install.buckminster" >
+	<target name="PublishStep_32" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1145,7 +1145,7 @@ This file was generated by Eclipse EGF
 </target>
 
 
-	<target name="AntStep_41">
+	<target name="AntStep_39">
 		<antcall target="cleanUp"/>
 	</target>
 
@@ -1184,10 +1184,12 @@ This file was generated by Eclipse EGF
     <delete dir="${publish}/org.polarsys.kitalpha.cadence.examples.feature"/>
     <delete dir="${publish}/org.polarsys.kitalpha.composer.examples.feature"/>
     <delete dir="${publish}/org.polarsys.kitalpha.transposer.examples.feature"/>
+    <delete dir="${publish}/examples"/>
+    <delete dir="${publish}/org.polarsys.kitalpha.vp.componentsample.example.installer.feature"/>
 </target>
 
 
-	<target name="EgfStep_28" depends="init,install.egf">
+	<target name="EgfStep_27" depends="init,install.egf">
 		<egf>
             <globargs>
 				<jvmarg value="-Degf.target.bundle.priority=true" />
@@ -1295,6 +1297,7 @@ This file was generated by Eclipse EGF
 				<repository location="file:/${publish}/org.polarsys.kitalpha.cadence.examples.feature/site.p2" />
 				<repository location="file:/${publish}/org.polarsys.kitalpha.product.feature/site.p2" />
 				<repository location="file:/${publish}/org.polarsys.kitalpha.representation.feature/site.p2" />
+				<repository location="file:/${publish}/org.polarsys.kitalpha.vp.componentsample.example.installer.feature/site.p2" />
 			</source>
 		</p2.mirror>
 	</target>
@@ -1860,88 +1863,6 @@ This file was generated by Eclipse EGF
             </args>
         </eclipse.launch>
 	</target>	
-	<target name="examples_feature" depends="init,install.director" >
-        <eclipse.launch app="director">
-            <args>
-                <jvmarg value="-Declipse.p2.mirrors=false" />
-                    <jvmarg value="-Xmx1024m"/>
-                    <jvmarg value="-XX:MaxPermSize=256m"/>
-
-
-            	<arg value="-roaming" />
-            	<arg value="-profileProperties" />
-                <arg value="org.eclipse.update.install.features=true " />
-
-                <arg value="-d" />
-                <arg value="${publish}/TP_mars" />
-                
-                <arg value="-p" />
-                <arg value="SDKProfile" />
-
-
-                <arg value="-r" />
-                <arg value="file:/${publish}/org.polarsys.kitalpha.cadence.examples.feature/site.p2" />
-                <arg value="-r" />
-                <arg value="file:/${publish}/org.polarsys.kitalpha.composer.examples.feature/site.p2" />
-                <arg value="-r" />
-                <arg value="file:/${publish}/org.polarsys.kitalpha.transposer.examples.feature/site.p2" />
-                
-
-
-                <arg value="-i" />
-                <arg value="org.polarsys.kitalpha.cadence.examples.feature.feature.group" />
-                <arg value="-i" />
-                <arg value="org.polarsys.kitalpha.cadence.examples.source.feature.feature.group" />
-                <arg value="-i" />
-                <arg value="org.polarsys.kitalpha.composer.examples.feature.feature.group" />
-                <arg value="-i" />
-                <arg value="org.polarsys.kitalpha.composer.examples.source.feature.feature.group" />
-                <arg value="-i" />
-                <arg value="org.polarsys.kitalpha.transposer.examples.feature.feature.group" />
-                <arg value="-i" />
-                <arg value="org.polarsys.kitalpha.transposer.examples.source.feature.feature.group" />
-
-            </args>
-        </eclipse.launch>
-	</target>	
-	<target name="sdk_feature" depends="init,install.director" >
-        <eclipse.launch app="director">
-            <args>
-                <jvmarg value="-Declipse.p2.mirrors=false" />
-                    <jvmarg value="-Xmx1024m"/>
-                    <jvmarg value="-XX:MaxPermSize=256m"/>
-
-
-            	<arg value="-roaming" />
-            	<arg value="-profileProperties" />
-                <arg value="org.eclipse.update.install.features=true " />
-
-                <arg value="-d" />
-                <arg value="${publish}/TP_mars" />
-                
-                <arg value="-p" />
-                <arg value="SDKProfile" />
-
-
-                <arg value="-r" />
-                <arg value="file:/${publish}/org.polarsys.kitalpha.sdk.feature/site.p2" />
-                <arg value="-r" />
-                <arg value="file:/${publish}/org.polarsys.kitalpha.product.feature/site.p2" />
-                
-
-
-                <arg value="-i" />
-                <arg value="org.polarsys.kitalpha.sdk.feature.feature.group" />
-                <arg value="-i" />
-                <arg value="org.polarsys.kitalpha.sdk.source.feature.feature.group" />
-                <arg value="-i" />
-                <arg value="org.polarsys.kitalpha.product.feature.feature.group" />
-                <arg value="-i" />
-                <arg value="org.polarsys.kitalpha.product.source.feature.feature.group" />
-
-            </args>
-        </eclipse.launch>
-	</target>	
 	<target name="TP_win32-win32-x86_setup_ctk_platform_setup_platform_TP_win32-win32-x86" depends="init,install.director" >
         <eclipse.launch app="director">
             <args>
@@ -2313,6 +2234,8 @@ This file was generated by Eclipse EGF
                 <arg value="file:/${publish}/org.polarsys.kitalpha.product.feature/site.p2" />
                 <arg value="-r" />
                 <arg value="file:/${publish}/org.polarsys.kitalpha.representation.feature/site.p2" />
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.kitalpha.vp.componentsample.example.installer.feature/site.p2" />
                 
 
 
@@ -2364,6 +2287,10 @@ This file was generated by Eclipse EGF
                 <arg value="org.polarsys.kitalpha.representation.feature.feature.group" />
                 <arg value="-i" />
                 <arg value="org.polarsys.kitalpha.representation.source.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.vp.componentsample.example.installer.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.vp.componentsample.example.installer.source.feature.feature.group" />
 
             </args>
         </eclipse.launch>
@@ -2739,6 +2666,8 @@ This file was generated by Eclipse EGF
                 <arg value="file:/${publish}/org.polarsys.kitalpha.product.feature/site.p2" />
                 <arg value="-r" />
                 <arg value="file:/${publish}/org.polarsys.kitalpha.representation.feature/site.p2" />
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.kitalpha.vp.componentsample.example.installer.feature/site.p2" />
                 
 
 
@@ -2790,6 +2719,10 @@ This file was generated by Eclipse EGF
                 <arg value="org.polarsys.kitalpha.representation.feature.feature.group" />
                 <arg value="-i" />
                 <arg value="org.polarsys.kitalpha.representation.source.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.vp.componentsample.example.installer.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.vp.componentsample.example.installer.source.feature.feature.group" />
 
             </args>
         </eclipse.launch>
@@ -3165,6 +3098,8 @@ This file was generated by Eclipse EGF
                 <arg value="file:/${publish}/org.polarsys.kitalpha.product.feature/site.p2" />
                 <arg value="-r" />
                 <arg value="file:/${publish}/org.polarsys.kitalpha.representation.feature/site.p2" />
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.kitalpha.vp.componentsample.example.installer.feature/site.p2" />
                 
 
 
@@ -3216,6 +3151,10 @@ This file was generated by Eclipse EGF
                 <arg value="org.polarsys.kitalpha.representation.feature.feature.group" />
                 <arg value="-i" />
                 <arg value="org.polarsys.kitalpha.representation.source.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.vp.componentsample.example.installer.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.vp.componentsample.example.installer.source.feature.feature.group" />
 
             </args>
         </eclipse.launch>
@@ -3591,6 +3530,8 @@ This file was generated by Eclipse EGF
                 <arg value="file:/${publish}/org.polarsys.kitalpha.product.feature/site.p2" />
                 <arg value="-r" />
                 <arg value="file:/${publish}/org.polarsys.kitalpha.representation.feature/site.p2" />
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.kitalpha.vp.componentsample.example.installer.feature/site.p2" />
                 
 
 
@@ -3642,6 +3583,10 @@ This file was generated by Eclipse EGF
                 <arg value="org.polarsys.kitalpha.representation.feature.feature.group" />
                 <arg value="-i" />
                 <arg value="org.polarsys.kitalpha.representation.source.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.vp.componentsample.example.installer.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.vp.componentsample.example.installer.source.feature.feature.group" />
 
             </args>
         </eclipse.launch>
@@ -4017,6 +3962,8 @@ This file was generated by Eclipse EGF
                 <arg value="file:/${publish}/org.polarsys.kitalpha.product.feature/site.p2" />
                 <arg value="-r" />
                 <arg value="file:/${publish}/org.polarsys.kitalpha.representation.feature/site.p2" />
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.kitalpha.vp.componentsample.example.installer.feature/site.p2" />
                 
 
 
@@ -4068,6 +4015,10 @@ This file was generated by Eclipse EGF
                 <arg value="org.polarsys.kitalpha.representation.feature.feature.group" />
                 <arg value="-i" />
                 <arg value="org.polarsys.kitalpha.representation.source.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.vp.componentsample.example.installer.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.vp.componentsample.example.installer.source.feature.feature.group" />
 
             </args>
         </eclipse.launch>
